manifests/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  bytez-server-service
spec:
  selector:
    app: bytez-server
  ports:
  - name:  bytez-server
    protocol: TCP
    port:  3000
    targetPort: 3000
